# availability-chat-application

./: CMakeLists.txt  README.md
libraries/: build_dependencies.sh
libraries/MyLibrary/: CMakeLists.txt  MyLibrary.cpp  MyLibrary.h
source/Client/: CMakeLists.txt  main.cpp
source/Server/: CMakeLists.txt  main.cpp
source/Server/RestServer/: RestServerController.cpp
source/Server/RestServer/Controllers/: BaseController.cpp  BaseController.h
